# wxO_advanced_workshop

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  sample.env
KnowledgeBase Labs/Built in Knowledge Lab/: Built In Lab.md  F1Agent.yaml
KnowledgeBase Labs/ElasticSearch Lab/: ES.yaml  ESAgent.yaml  ESearch Lab.md
KnowledgeBase Labs/Milvus Lab/: Milvus Lab.md  MilvusF1.yaml
MCP LAB/: labguide.md
agent-styles-lab/: README-for-agent-styles-lab.md
agent-styles-lab/src/agents/: word-problem-solver-final.yaml  word-problem-solver-react.yaml  word-problem-solver.yaml
ai-gateway-labs/: README ai-gateway-labs.md
connections-lab/: tavily_lab_guide.md
context-variables-lab/: README-for-context-variables-lab.md
flow-tools-lab/: Test_Your_Flow.py  creating-new-gmail.md  lab-guide.md
flow-tools-lab/agents/: agent.yaml
flow-tools-lab/final/: Test_Your_Flow.py  import-all.sh
flow-tools-lab/tools/: flow.py  gmail.py  web_search.py
knowledge-base-labs/built-in-kb-lab/: Builtin.yaml  F1Agent.yaml  built-in-lab.md
knowledge-base-labs/elastic-search-lab/: ES.yaml  ESAgent.yaml  e-search-lab.md
knowledge-base-labs/milvus-lab/: MilvusAgent.yaml  MilvusF1.yaml  milvus-lab.md
mcp-lab/: github_helper.yaml  labguide.md
multi-agent-labs/context_variables_lab/: README.md
observability-lab/: lab-guide.md
observability-lab/Final_Code/: configure-lang.sh
presentations/: Welcome to the ADK.pptx
tools-lab/: lab-guide.md
tools-lab/agents/: agent.yaml
tools-lab/final/: import-all.sh
welcome-to-the-adk/: README_for_welcome_to_the_adk.md
(+33 files in other folders)
